listview funcionando con string, hay que reemplazar esos string por elementos de la clase ElementoMenu

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,24 +55,21 @@
         android:layout_height="wrap_content">
 
         <RadioButton
-            android:id="@+id/plato"
+            android:id="@+id/rb1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onRadioButtonClicked"
             android:text="@string/rbopcion1" />
 
         <RadioButton
-            android:id="@+id/postre"
+            android:id="@+id/rb2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onRadioButtonClicked"
             android:text="@string/rbopcion2" />
 
         <RadioButton
-            android:id="@+id/bebida"
+            android:id="@+id/rb3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onRadioButtonClicked"
             android:text="@string/rbopcion3" />
     </RadioGroup>
 
